fix: file name overflow on filePreview section

--- a/src/components/B4ACodeTree/B4ACodeTree.scss
+++ b/src/components/B4ACodeTree/B4ACodeTree.scss
@@ -136,8 +136,10 @@
     align-items: center;
 
     p {
+      @include ellipsis();
       color: $white;
       padding: 0;
+      max-width: 40%;
     }
     .deleteBtn {
       text-align: center;
